<resources>
    <string name="app_name">Split1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back_to_main">Back to Main</string>
    <string name="welcome_to_split">Welcome to Split</string>
    <string name="sign_up">Sign-Up</string>
    <string name="name">Name</string>
    <string name="sign_me_up">Sign Me Up</string>
    <string name="user_image_profile">User Image Profile</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign-In</string>
    <string name="password">Password</string>
    <string name="login_success">"Logged in succesfully "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_items">My Items</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item name</string>
    <string name="price">Price</string>
    <string name="back_to_space">Back to space</string>
</resources>